* 2013-11-11 - tobias.friedrich@open-xchange.com

 - Fix for bug 29728: Be prepared for initially synchronized recurring appointments with delete exceptions 
 - Fix for bug 29746: Adjust buffer position in enhanced random access file after append operations  

* 2013-11-08 - tobias.friedrich@open-xchange.com

 - Fix for bug 29288: Use two-step approach when querying infostore documents from many folders 

* 2013-11-08 - thorben.betten@open-xchange.com

 - Fix for bug 29725: Handle possible error when initializing capabilities + let OXFolderManager rather operate on user's permission
                      than on user's configuration
 - Fix for bug 29737: Inlined used method from c.o.java.Strings

* 2013-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 29683: Create special "E-Mail attachments" InfoStore folder with private-only permissions

* 2013-11-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 29609: Use cached sessions for consecutive WebDAV requests of the same client 
 - Fix for bug 29641: Supply one 'supported-calendar-component-set' inside 'supported-calendar-component-sets' for each supported component

* 2013-11-05 - thorben.betten@open-xchange.com

 - Fix for bug 29649: Check needed service for not null
 - Fix for bug 29650: Avoid possible NPE when resolving a folder storage by a Content-Type identifier
 - Fix for bug 29651: Added null guard when accessing possibly absent service
 - Fix for bug 29653: Added null guard when accessing possibly absent service
 - Fix for bug 29654: Added null guard when accessing possibly absent service
 - Fix for bug 29660: Handle OXException's that do not have a category assigned
 - Fix for bug 29666: User proper default charset when URL-encoding publication's site name
 - Fix for bug 29656: Check for possibly absent count Integer instance

* 2013-11-04 - jan.bauerdick@open-xchange.com

 - Fix for bug 29652: Added NPE check

* 2013-11-04 - tobias.friedrich@open-xchange.com
