@@ -3,6 +3,10 @@
  - Fix for bug 29728: Be prepared for initially synchronized recurring appointments with delete exceptions 
  - Fix for bug 29746: Adjust buffer position in enhanced random access file after append operations  
 
+* 2013-11-11 - martin.schneider@open-xchange.com
+
+ - Fix for bug 29720: Allow admin templates to be displayed even if user templating is disabled 
+
 * 2013-11-08 - tobias.friedrich@open-xchange.com
 
  - Fix for bug 29288: Use two-step approach when querying infostore documents from many folders 
